
CREATE VIEW turq_view_cheque_status AS 
 SELECT cheq.cheque_cheques_id, cheq.cheques_portfolio_no, cheq.cheques_no, cheq.banks_id, cheq.cheques_due_date, cheq.cheques_debtor, cheq.cheques_payment_place, cheq.cheques_value_date, cheq.cheques_amount, cheq.currencies_id, transtype.cheque_transaction_types_id, transtype.transaction_typs_name, transtype.accounting_accounts_id, rolls.cheque_rolls_id, rolls.cheque_rolls_date, rolls.engine_sequences_id, rolls.cheque_roll_no, rolls.current_cards_id, rolls.banks_cards_id
FROM turq_cheque_cheques cheq, turq_cheque_rolls rolls, turq_cheque_cheque_in_rolls cheqrolls, turq_cheque_transaction_types transtype

WHERE cheq.cheque_cheques_id = cheqrolls.cheque_cheques_id AND rolls.cheque_rolls_id = cheqrolls.cheque_rolls_id AND transtype.cheque_transaction_types_id = rolls.cheque_transaction_types_id 
AND rolls.cheque_rolls_id = (( SELECT max(roll_inner.cheque_rolls_id)
FROM turq_cheque_rolls roll_inner, turq_cheque_cheque_in_rolls cheqroll_inner, turq_cheque_cheques cheq_inner
WHERE cheqroll_inner.cheque_rolls_id = roll_inner.cheque_rolls_id AND cheqroll_inner.cheque_cheques_id = cheq_inner.cheque_cheques_id AND cheqroll_inner.cheque_cheques_id = cheq.cheque_cheques_id));

******************** ***************************************
  
********************* New Table Added *****************************   
--turq_cheuqe_roll_accounting_accounts-----

  CREATE TABLE turq_cheque_roll_accounting_accounts
(
  cheque_rolls_id integer NOT NULL,
  accounting_accounts_id integer NOT NULL,
  CONSTRAINT turq_cheque_roll_accounting_accounts_pkey PRIMARY KEY (cheque_rolls_id),
  CONSTRAINT crac1 FOREIGN KEY (accounting_accounts_id) REFERENCES turq_accounting_accounts (accounting_accounts_id) ON UPDATE RESTRICT ON DELETE RESTRICT,
  CONSTRAINT crac2 FOREIGN KEY (cheque_rolls_id) REFERENCES turq_cheque_rolls (cheque_rolls_id) ON UPDATE RESTRICT ON DELETE RESTRICT
) 

**********************************************************************