@@ -63,6 +63,8 @@ CashUICashPaymentTransactionUpdate.7=Silmek istedi\u011Finize emin misiniz?
 CashUICashPaymentTransactionUpdate.8=Ba\u015Far\u0131yla Silindi\!
 CashUICashPaymentTransactionUpdate.9=Ba\u015Far\u0131yla G\u00FCncellendi..
 CashUICashPaymentTransactionUpdate.0=Tediye Fi\u015Fi G\u00FCncelleme
+CashUICashOtherCollectTransaction.0=L\u00FCtfen Muhasebe Hesab\u0131 Giriniz\!
+CashUICashOtherPaymentTransaction.0=L\u00FCtfen Muhasebe Hesab\u0131 Giriniz\!
 CashUICashTransactionSearch.0=Kasa Kart\u0131
 CashUICashTransactionSearch.1=Ba\u015Flang\u0131\u00E7 Tarihi
 CashUICashTransactionSearch.10=A\u00E7\u0131klama
