@@ -110,6 +110,8 @@ TreeFactory.100=Bankaya \u00C7ek \u00C7\u0131k\u0131\u015F\u0131
 TreeFactory.101=M\u00FC\u015Fteri \u00C7eki Arama
 TreeFactory.102=Firma \u00C7eki Arama
 TreeFactory.103=Bankadan \u00C7ek Tahsilat\u0131
+TreeFactory.104=Di\u011Fer Tahsilat
+TreeFactory.105=Di\u011Fer \u00D6deme
 TreeFactory.11=Hesap Plan\u0131
 TreeFactory.12=Mahsup Fi\u015Fi Ekle
 TreeFactory.13=Tahsil Fi\u015Fi Ekle
